--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:ital,wght@0,400;0,700;1,100&display=swap" rel="stylesheet"/>
 
-    <title>Vite + React + TS</title>
+    <title>Timer Ignite</title>
   </head>
   <body>
     <div id="root"></div>
